# MediaLyze

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md
.github/agents/: tests.agent.md
.github/scripts/: release_metadata.py
.github/workflows/: build-docker-dev.yaml  build-docker-manual.yaml  build-docker.yaml  validate-release-pr.yaml
alembic/: env.py
alembic/versions/: 20260308_0001_initial.py
backend/app/: main.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: app_settings.py  browse.py  library.py  media.py  quality.py  scan.py
config/: medialyze.db-shm
docker/: docker-compose.yaml  entrypoint.sh  env.example
docs/: architecture.md  ignore_files_folders.md  themes.md
frontend/: globals.css  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  i18n.ts  main.tsx  medialyze.css
scripts/: local_start.ps1  local_start.sh
tests/: test_api_routes.py  test_app_settings.py  test_browse.py  test_db_session.py  test_ffprobe_parser.py  test_library_service.py  test_media_service.py  test_pathing.py  test_quality.py  test_release_metadata.py  test_runtime.py  test_scan_jobs.py  test_scanner.py  test_subtitles.py
(+49 files in other folders)
